I fixed the bug which was in the process of saving data.

--- a/add client.html
+++ b/add client.html
@@ -54,10 +54,19 @@
           <tbody>
             <tr>
               <td class="p-0" width="50rem">
-                <input type="text" id="add-client-sno" class="py-1 form-inps" readonly />
+                <input
+                  type="text"
+                  id="add-client-sno"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="50rem">
-                <input type="date" id="add-client-date" class="form-inps py-1" />
+                <input
+                  type="date"
+                  id="add-client-date"
+                  class="form-inps py-1"
+                />
               </td>
               <td class="p-0" width="300rem">
                 <select id="add-client-client-name" class="form-inps py-1">
@@ -69,16 +78,24 @@
                 </select>
               </td>
               <td class="p-0" width="300rem">
-                <input type="text" id="add-client-address" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="text"
+                  id="add-client-address"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="add-client-client-cell-num" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="add-client-client-cell-num"
+                  class="py-1 form-inps"
+                />
               </td>
             </tr>
           </tbody>
         </table>
-      </section>      
-      
+      </section>
     </div>
   </body>
 
