--- a/add employee.html
+++ b/add employee.html
@@ -55,10 +55,19 @@
           <tbody>
             <tr>
               <td class="p-0" width="50rem">
-                <input type="text" id="add-employee-sno" class="py-1 form-inps" readonly />
+                <input
+                  type="text"
+                  id="add-employee-sno"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="50rem">
-                <input type="date" id="add-employee-date" class="form-inps py-1" />
+                <input
+                  type="date"
+                  id="add-employee-date"
+                  class="form-inps py-1"
+                />
               </td>
               <td class="p-0" width="300rem">
                 <select id="add-employee-employee-name" class="form-inps py-1">
@@ -70,19 +79,31 @@
                 </select>
               </td>
               <td class="p-0" width="300rem">
-                <input type="text" id="add-employee-designation" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="text"
+                  id="add-employee-designation"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="add-employee-cell-num" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="add-employee-cell-num"
+                  class="py-1 form-inps"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="add-employee-salary" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="add-employee-salary"
+                  class="py-1 form-inps"
+                />
               </td>
             </tr>
           </tbody>
         </table>
-      </section>      
-      
+      </section>
     </div>
   </body>
 
