--- a/advance salary.html
+++ b/advance salary.html
@@ -55,13 +55,25 @@
           <tbody>
             <tr>
               <td class="p-0" width="50rem">
-                <input type="text" id="advance-salary-sno" class="py-1 form-inps" readonly />
+                <input
+                  type="text"
+                  id="advance-salary-sno"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="50rem">
-                <input type="date" id="advance-salary-date" class="form-inps py-1" />
+                <input
+                  type="date"
+                  id="advance-salary-date"
+                  class="form-inps py-1"
+                />
               </td>
               <td class="p-0" width="300rem">
-                <select id="advance-salary-employee-name" class="form-inps py-1">
+                <select
+                  id="advance-salary-employee-name"
+                  class="form-inps py-1"
+                >
                   <option value="employee 1">employee 1</option>
                   <option value="employee 2">employee 2</option>
                   <option value="employee 3">employee 3</option>
@@ -70,19 +82,31 @@
                 </select>
               </td>
               <td class="p-0" width="300rem">
-                <input type="text" id="advance-salary-designation" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="text"
+                  id="advance-salary-designation"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="advance-salary-cell-num" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="advance-salary-cell-num"
+                  class="py-1 form-inps"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="advance-salary-salary" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="advance-salary-salary"
+                  class="py-1 form-inps"
+                />
               </td>
             </tr>
           </tbody>
         </table>
-      </section>      
-      
+      </section>
     </div>
   </body>
 
