--- a/payroll entry.html
+++ b/payroll entry.html
@@ -61,10 +61,19 @@
           <tbody>
             <tr>
               <td class="p-0" width="50rem">
-                <input type="text" id="payroll-entry-sno" class="py-1 form-inps" readonly />
+                <input
+                  type="text"
+                  id="payroll-entry-sno"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="50rem">
-                <input type="date" id="payroll-entry-date" class="form-inps py-1" />
+                <input
+                  type="date"
+                  id="payroll-entry-date"
+                  class="form-inps py-1"
+                />
               </td>
               <td class="p-0" width="300rem">
                 <select id="payroll-entry-employee-name" class="form-inps py-1">
@@ -76,37 +85,73 @@
                 </select>
               </td>
               <td class="p-0" width="300rem">
-                <input type="text" id="payroll-entry-designation" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="text"
+                  id="payroll-entry-designation"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="payroll-entry-month-working-days" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="number"
+                  id="payroll-entry-month-working-days"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="payroll-entry-emp-working-days" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="number"
+                  id="payroll-entry-emp-working-days"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="payroll-entry-leaves" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="number"
+                  id="payroll-entry-leaves"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="payroll-entry-salary" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="payroll-entry-salary"
+                  class="py-1 form-inps"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="payroll-entry-advance" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="payroll-entry-advance"
+                  class="py-1 form-inps"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="payroll-entry-net-salary" class="py-1 form-inps" readonly />
+                <input
+                  type="number"
+                  id="payroll-entry-net-salary"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="50rem">
-                <button id="payroll-entry-edit" class="py-1 form-inps">edit</button>
+                <button id="payroll-entry-edit" class="py-1 form-inps">
+                  edit
+                </button>
               </td>
               <td class="p-0" width="50rem">
-                <button id="payroll-entry-delete" class="py-1 form-inps">delete</button>
+                <button id="payroll-entry-delete" class="py-1 form-inps">
+                  delete
+                </button>
               </td>
             </tr>
           </tbody>
         </table>
-      </section>      
-      
+      </section>
     </div>
   </body>
 
