--- a/vendor's transaction.html
+++ b/vendor's transaction.html
@@ -41,123 +41,124 @@
     <div class="container">
       <section>
         <h1 class="my-5 d-form-head">vendor's transaction</h1>
-      <table class="table" width="100%">
-        <thead>
-          <tr>
-            <th scope="col">prouct</th>
-            <th scope="col">bags</th>
-            <th scope="col">bags weight</th>
-            <th scope="col">price</th>
-            <th scope="col">total price</th>
-            <th scope="col">amount payable</th>
-            <th scope="col">advance payment</th>
-            <th scope="col">outstanding payable</th>
-            <th scope="col">balance</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="p-0" width="250rem">
-              <select id="add-vendor-product" class="form-inps py-1">
-                <option value="product 1">product 1</option>
-                <option value="product 2">product 2</option>
-                <option value="product 3">product 3</option>
-                <option value="product 4">product 4</option>
-                <option value="product 5">product 5</option>
-              </select>
-            </td>
+        <table class="table" width="100%">
+          <thead>
+            <tr>
+              <th scope="col">prouct</th>
+              <th scope="col">bags</th>
+              <th scope="col">bags weight</th>
+              <th scope="col">price</th>
+              <th scope="col">total price</th>
+              <th scope="col">amount payable</th>
+              <th scope="col">advance payment</th>
+              <th scope="col">outstanding payable</th>
+              <th scope="col">balance</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="p-0" width="250rem">
+                <select id="add-vendor-product" class="form-inps py-1">
+                  <option value="product 1">product 1</option>
+                  <option value="product 2">product 2</option>
+                  <option value="product 3">product 3</option>
+                  <option value="product 4">product 4</option>
+                  <option value="product 5">product 5</option>
+                </select>
+              </td>
 
-            <td class="p-0" width="80rem">
-              <input
-                type="number"
-                id="add-vendor-bags"
-                class="py-1 form-inps"
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="80rem">
+                <input
+                  type="number"
+                  id="add-vendor-bags"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="110rem">
-              <input
-                type="number"
-                id="add-vendor-bags-weight"
-                class="py-1 form-inps"
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="110rem">
+                <input
+                  type="number"
+                  id="add-vendor-bags-weight"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="150rem">
-              <input
-                type="number"
-                id="add-vendor-price"
-                class="py-1 form-inps"
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="150rem">
+                <input
+                  type="number"
+                  id="add-vendor-price"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="150rem">
-              <input
-                type="number"
-                id="add-vendor-total-value"
-                class="py-1 form-inps"
-                readonly
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="150rem">
+                <input
+                  type="number"
+                  id="add-vendor-total-value"
+                  class="py-1 form-inps"
+                  readonly
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="150rem">
-              <input
-                type="number"
-                id="add-vendor-advance-payment"
-                class="py-1 form-inps"
-                readonly
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="150rem">
+                <input
+                  type="number"
+                  id="add-vendor-advance-payment"
+                  class="py-1 form-inps"
+                  readonly
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="150rem">
-              <input
-                type="number"
-                id="add-vendor-amount-payable"
-                class="py-1 form-inps"
-                readonly
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="150rem">
+                <input
+                  type="number"
+                  id="add-vendor-amount-payable"
+                  class="py-1 form-inps"
+                  readonly
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="150rem">
-              <input
-                type="number"
-                id="add-vendor-outstanding-payable"
-                class="py-1 form-inps"
-                readonly
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="150rem">
+                <input
+                  type="number"
+                  id="add-vendor-outstanding-payable"
+                  class="py-1 form-inps"
+                  readonly
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="150rem">
-              <input
-                type="number"
-                id="add-vendor-balance"
-                class="py-1 form-inps"
-                readonly
-                autocomplete="off"
-              />
-            </td>
+              <td class="p-0" width="150rem">
+                <input
+                  type="number"
+                  id="add-vendor-balance"
+                  class="py-1 form-inps"
+                  readonly
+                  autocomplete="off"
+                />
+              </td>
 
-            <td class="p-0" width="50rem">
-              <button id="add-vendor-edit" class="py-1 form-inps">edit</button>
-            </td>
+              <td class="p-0" width="50rem">
+                <button id="add-vendor-edit" class="py-1 form-inps">
+                  edit
+                </button>
+              </td>
 
-            <td class="p-0" width="50rem">
-              <button id="add-vendor-edit" class="py-1 form-inps">
-                delete
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              <td class="p-0" width="50rem">
+                <button id="add-vendor-edit" class="py-1 form-inps">
+                  delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </section>
-      
     </div>
   </body>
 
