--- a/client's entry.html
+++ b/client's entry.html
@@ -65,10 +65,19 @@
           <tbody>
             <tr>
               <td class="p-0" width="50rem">
-                <input type="text" id="clients-entry-sno" class="py-1 form-inps" readonly />
+                <input
+                  type="text"
+                  id="clients-entry-sno"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="50rem">
-                <input type="date" id="clients-entry-date" class="form-inps py-1" />
+                <input
+                  type="date"
+                  id="clients-entry-date"
+                  class="form-inps py-1"
+                />
               </td>
               <td class="p-0" width="300rem">
                 <select id="clients-entry-client-name" class="form-inps py-1">
@@ -80,10 +89,19 @@
                 </select>
               </td>
               <td class="p-0" width="300rem">
-                <input type="text" id="clients-entry-address-size" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="text"
+                  id="clients-entry-address-size"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-client-cell-num" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="clients-entry-client-cell-num"
+                  class="py-1 form-inps"
+                />
               </td>
               <td class="p-0" width="200rem">
                 <select id="clients-entry-product" class="form-inps py-1">
@@ -95,41 +113,81 @@
                 </select>
               </td>
               <td class="p-0" width="200rem">
-                <input type="text" id="clients-entry-size" class="py-1 form-inps" autocomplete="off" />
+                <input
+                  type="text"
+                  id="clients-entry-size"
+                  class="py-1 form-inps"
+                  autocomplete="off"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-bundles" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="clients-entry-bundles"
+                  class="py-1 form-inps"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-ft" class="py-1 form-inps" />
+                <input
+                  type="number"
+                  id="clients-entry-ft"
+                  class="py-1 form-inps"
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-price" class="py-1 form-inps" readonly />
+                <input
+                  type="number"
+                  id="clients-entry-price"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-total-value" class="py-1 form-inps" readonly />
+                <input
+                  type="number"
+                  id="clients-entry-total-value"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-amount-receivable" class="py-1 form-inps" readonly />
+                <input
+                  type="number"
+                  id="clients-entry-amount-receivable"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-received-by-client" class="py-1 form-inps" readonly />
+                <input
+                  type="number"
+                  id="clients-entry-received-by-client"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="200rem">
-                <input type="number" id="clients-entry-outstanding-amount" class="py-1 form-inps" readonly />
+                <input
+                  type="number"
+                  id="clients-entry-outstanding-amount"
+                  class="py-1 form-inps"
+                  readonly
+                />
               </td>
               <td class="p-0" width="50rem">
-                <button id="clients-entry-edit" class="py-1 form-inps">edit</button>
+                <button id="clients-entry-edit" class="py-1 form-inps">
+                  edit
+                </button>
               </td>
               <td class="p-0" width="50rem">
-                <button id="clients-entry-delete" class="py-1 form-inps">delete</button>
+                <button id="clients-entry-delete" class="py-1 form-inps">
+                  delete
+                </button>
               </td>
             </tr>
           </tbody>
         </table>
       </section>
-      
-      
     </div>
   </body>
 
